# lotf

./: CMakeLists.txt  README.md  bitbucket-pipelines.yml  make_ninja_project.sh
src/: CMakeLists.txt  Flies.cpp  Flies.h  Fly.cpp  Fly.h  Options.cpp  Options.h  debug.h  game.h  main.cpp
src/qml/: AButton.qml  CMakeLists.txt  Credits.qml  LevelBase.qml  MainMenu.qml  MenuButton.qml  MenuIntButton.qml  NewGame.qml  Options.qml  main.qml  qml.qrc
